--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 .flexible img{
     width: 100%;
-    height: auto;
+    height: 500px;
 }
 .hBoder{
     border-left: 3px solid orangered;
