--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
 }
-.header-top{
+.middhlePart{
     display: flex;
 }
 .flexible{
@@ -70,4 +70,29 @@ body{
 }
 .c3{
     background-color: aquamarine;
+}
+.codingText{
+    width: 55%;
+    padding: 2%;
+}
+.codingImg{
+    width: 40%;
+}
+.codingImg img{
+    width: 100%;
+    height: fit-content;
+}
+.codingWrap{
+    margin-top: 80px;
+    background-image: url(images/shape-1.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 120px;
+}
+.CommunityWrap{
+    margin-top: 80px;
+    background-image: url(images/shape-1.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: 120px;
 }
